@startumlclassDiagram
             class TachyonPhysics~SimulationState~ {
                 <<interface>>
                 +enterAtSource(String firstRow) SimulationState
                 +propagateThrough(SimulationState state, String row) SimulationState
             }

             class TachyonManifold {
                 -List~String~ diagram
                 -TachyonManifold(List~String~ diagram)
                 +fromDiagram(List~String~ diagram)$ TachyonManifold
                 +simulate(TachyonPhysics~SimulationState~ physics) SimulationState
             }

             class ClassicalTachyonPhysics {
                 +enterAtSource(String firstRow) ClassicalState
                 +propagateThrough(ClassicalState state, String row) ClassicalState
                 -calculateNextPositions(Set~Integer~ beams, String row) Set~Integer~
                 -countNewSplits(Set~Integer~ beams, String row) long
                 -hitSplitter(String row, int pos) boolean
                 -isWithinManifold(String row, int pos) boolean
             }

             class ClassicalState {
                 <<record>>
                 +Set~Integer~ activeBeams
                 +long totalSplits
             }

             ClassicalTachyonPhysics ..|> TachyonPhysics : Implements
             TachyonManifold ..> TachyonPhysics : Simulates (Strategy Injection)
             ClassicalTachyonPhysics ..> ClassicalState : Instantiates
@enduml